--- a/module001.html
+++ b/module001.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        spi
+        Sherpur news with jishan vai
         <link rel="icon" type="image/x-icon" href="F:\PH FC CLASSES\pic & videos\fb.JPEG">
     </title>
     <link rel="stylesheet" href="module02.css">
@@ -11,12 +11,12 @@
 
 <body background="F:\PH FC CLASSES\pic & videos\\natural image for background.jpg">
     <h1>This is Sherpur</h1>
+    <h1>Jishan vai blog</h1>
     <img src="F:\PH FC CLASSES\pic & videos\visiting card.png">
     <a href="https://www.google.com/">click to visit Google</a>
     <p id="cool">
         The name <b>"Sherpur"</b> can't be found in ancient history. During the rules of emperor Akbar, this area was called "Dash Kahonia Baju". The previous name of Brahmaputra river in this area was "Louhitto Sagar" which was situated in a vast area
         from the south border of Sherpur municipality to Jamalpur Ghat. The people of this area had to pay 10 kahon coins to the leaseholders as an annual tax for travelling in the river. "Dash" means ten and "Kahon" is a unit of measure for counting
-
     </p>
     <p id="cool">During the Nawabi period in Bangla, the last landlord of Gazi clan, Sher Ali Gazi occupied and reigned this area independently. From then, the name of this area was changed from "Dash Kahonia" to Sherpur according to the name of the ruler, Sher Ali
         Gazi.[5]
