--- a/module001.html
+++ b/module001.html
@@ -4,10 +4,11 @@
 <head>
     <title>
         Sherpur news with jishan vai
-        <link rel="icon" type="image/x-icon" href="F:\PH FC CLASSES\pic & videos\fb.JPEG">
+        <link rel="icon" type="image/x-icon" href="C:\k2\fb.JPEG">
     </title>
     <link rel="stylesheet" href="module02.css">
 </head>
+<img src="C:\k2\image.jpg">
 
 <body background="F:\PH FC CLASSES\pic & videos\\natural image for background.jpg">
     <h1>This is Sherpur</h1>
